unified_tests/methods/duplicate_name/expect/build.text.stderr
lib.copp:6:14: error: duplicate method 'User.idValue'
      function idValue(self) -> int64 {
               ^
